--- a/MSDS-DDS-HW9/Bhuvana_HW9.Rmd
+++ b/MSDS-DDS-HW9/Bhuvana_HW9.Rmd
@@ -104,7 +104,7 @@ str(shootStatsData)
 
 ## Including Plots
 
-```{r pressure, echo=FALSE}
+```{r shoot stats chart, echo=FALSE}
 
 
 library("RColorBrewer")
