--- a/TealBook_Assignment.ipynb
+++ b/TealBook_Assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TealBook_Assignment.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzzScz11YnIGpdos61JATl",
+      "authorship_tag": "ABX9TyP2SAJzUwKkty2pOpTZD/Jg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,11 +30,23 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "0kpCyugLb_7b"
+      },
+      "source": [
+        "!pip3 install swifter\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "xZzRDFdgIGnM"
       },
       "source": [
         "import pandas as pd\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "import swifter\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -1950,7 +1962,87 @@
         "id": "5Rp6qvFoUtc8"
       },
       "source": [
-        "Since the goal is to get the temperature statistics for In order to map a station with an urban city"
+        "# Since the goal is to obtain the temperature statistics for urban canada, the station that are part of urban canada cities should be filtered. But, in order to map a station with an urban city, there is no other mapping columns available other than the latitude & longtitude for weather station and city.\n",
+        "# The below code blocks contains logic to determine distance from the weather statation to all the urban cities that are part of the province. Climate dataframe contains weather station Latitude,longitude and also the province Code for the stations. This will explained in steps.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6BvTqv-DairY"
+      },
+      "source": [
+        "#Step 1 : Below function is referred from https://www.geeksforgeeks.org/program-distance-two-points-earth/. This program contains logic to determine distance between two points using teh latitude and longitude."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "len3sgyQZ1UT"
+      },
+      "source": [
+        "\n",
+        "def distance(lat1: float, lat2: float, lon1: float, lon2: float) -> float:\n",
+        "    # The math module contains a function named\n",
+        "    # radians which converts from degrees to radians.\n",
+        "    lon1 = radians(lon1)\n",
+        "    lon2 = radians(lon2)\n",
+        "    lat1 = radians(lat1)\n",
+        "    lat2 = radians(lat2)\n",
+        "    # Haversine formula\n",
+        "    dlon = lon2 - lon1\n",
+        "    dlat = lat2 - lat1\n",
+        "    a = sin(dlat / 2) ** 2 + cos(lat1) * cos(lat2) * sin(dlon / 2) ** 2\n",
+        "    c = 2 * asin(sqrt(a))\n",
+        "    # Radius of earth in kilometers. Use 3956 for miles\n",
+        "    r = 6371\n",
+        "    # calculate the result\n",
+        "    return c * r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SQdrSujtbClJ"
+      },
+      "source": [
+        "# Step 2: Another function defined, which will take the required input arguments to compute the distance between a given station and all the cities that are part of the province the statation is located. (Climate csv only contain station , temperature & province code. There is no direct mapping to cities)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gRk5sbMkbh1e"
+      },
+      "source": [
+        "def station_city_mapping(province_code,station_lat,station_lng):\n",
+        "    urban_city_sub_df = urban_city_df_map[province_code]\n",
+        "    city_name_series = urban_city_sub_df['CITY']\n",
+        "    city_lat_series = urban_city_sub_df['LAT']\n",
+        "    city_lng_series = urban_city_sub_df['LNG']\n",
+        "    dist_arr = []\n",
+        "    for index, value in city_lat_series.items():\n",
+        "        city_lat = value\n",
+        "        city_lng = city_lng_series[index]\n",
+        "        dist = distance(city_lat, station_lat, city_lng, station_lng)\n",
+        "        dist_arr.append(dist)    \n",
+        "    min_dist = min(dist_arr)\n",
+        "    min_idx = dist_arr.index(min_dist)    \n",
+        "    city = city_name_series.iloc[min_idx]    \n",
+        "    return pd.Series({'CITY': city,'DISTANCE_FROM_CITY_KM': min_dist})\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hBdr_n6ob3pp"
+      },
+      "source": [
+        ""
       ]
     }
   ]
